--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -9,7 +9,7 @@ permissions:
   pull-requests: write
 
 jobs:
-  validate:
+  setup:
     runs-on: ubuntu-latest
     if: github.event.pull_request.draft == false
 
@@ -54,6 +54,11 @@ jobs:
     - name: Populate release notes
       run: cp -r site/_source/release-notes/releases site
 
+  validate:
+    runs-on: ubuntu-latest
+    if: github.event.pull_request.draft == false
+
+    steps:
     - name: Render demo docs site
       run: |
           cd site
@@ -74,6 +79,11 @@ jobs:
           echo "No warnings or errors detected during Quarto render"
         fi
 
+  deploy:
+    runs-on: ubuntu-latest
+    if: github.event.pull_request.draft == false
+
+    steps:
     # Demo bucket is in us-east-1
     - name: Configure AWS credentials
       run: aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID_STAGING }} && aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY_STAGING }} && aws configure set default.region us-east-1
@@ -87,23 +97,6 @@ jobs:
         script: |
           const previewUrl = `https://docs-staging.validmind.ai/pr_previews/${{ github.head_ref }}/index.html`;
 
-          // Delete old preview comments
-          const { data: comments } = await github.rest.issues.listComments({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            issue_number: context.issue.number,
-          });
-
-          for (const comment of comments) {
-            if (comment.user.login === 'github-actions[bot]' && comment.body.includes('## Validate docs site')) {
-              await github.rest.issues.deleteComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                comment_id: comment.id,
-              });
-            }
-          }
-
           let comment = `## Validate docs site\n\n`;
           comment += `✓ INFO: A live preview of the docs site is available — [Open the preview](${previewUrl})\n\n`;
 
@@ -114,6 +107,11 @@ jobs:
             body: comment
           });
 
+  cleanup:
+    runs-on: ubuntu-latest
+    if: github.event.pull_request.draft == false
+
+    steps:
     # Release headroom and shrink before final lightweight steps & post-job
     - name: Release reserve & shrink
       if: always()
