Copying functionality to staging & prod

--- a/.github/workflows/execute-pr-preview.yaml
+++ b/.github/workflows/execute-pr-preview.yaml
@@ -20,7 +20,7 @@ jobs:
 
     steps:
     - name: Check out documentation repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     # Reclaim space + create a reserve for deterministic headroom
     - name: Free space + create reserve
@@ -113,9 +113,9 @@ jobs:
           const valUrl = `${base}/notebooks/EXECUTED/model_validation/1-set_up_validmind_for_validation.html`;
 
           let comment = `## Execute training notebooks for PRs\n\n`;
-          comment += `✓ INFO: Live previews are available:\n\n`;
-          comment += `- [Model development series](${devUrl})\n`;
-          comment += `- [Model validation series](${valUrl})\n`;
+          comment += `✓ INFO: Live previews are available —\n\n`;
+          comment += `- [Open model development series](${devUrl})\n`;
+          comment += `- [Open model validation series](${valUrl})\n`;
 
           await github.rest.issues.createComment({
             owner: context.repo.owner,
