--- a/.github/workflows/execute-staging.yaml
+++ b/.github/workflows/execute-staging.yaml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  run-if-success:
+  execute:
     if: |
       github.event_name == 'workflow_dispatch' ||
       (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success')
