--- a/.github/workflows/merge-main-into-staging.yaml
+++ b/.github/workflows/merge-main-into-staging.yaml
@@ -30,13 +30,29 @@ jobs:
         run: |
           git merge --no-ff origin/main
 
+      # NEW: detect the PR that triggered this push to main (if any)
+      - name: Determine source PR (if any)
+        id: source-pr
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          prs=$(gh api \
+            repos/${{ github.repository }}/commits/${{ github.sha }}/pulls \
+            -H "Accept: application/vnd.github+json")
+          number=$(echo "$prs" | jq -r '.[0].number // empty')
+          if [ -n "$number" ]; then
+            echo "prefix=PR#$number — " >> "$GITHUB_OUTPUT"
+          else
+            echo "prefix=" >> "$GITHUB_OUTPUT"
+          fi
+
       - name: Create pull request
         id: pr-number
         uses: peter-evans/create-pull-request@v5
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: update-staging-${{ github.run_id }}
-          title: 'Merge main into staging'
+          title: '${{ steps.source-pr.outputs.prefix }}Merge main into staging'
           body: 'Automatically merge main into staging branch.'
 
       - name: Merge pull request (with retries)
