+ Manage workflow tasks guide

--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -44,6 +44,7 @@ website:
           contents:
           - guide/model-workflows/manage-model-workflows.qmd
           - guide/model-workflows/transition-model-workflows.qmd
+          - guide/model-workflows/manage-workflow-tasks.qmd
         - text: "---"
         - text: "Model Inventory"
         - text: "Working with the inventory"
