--- a/.github/workflows/execute-pr-preview.yaml
+++ b/.github/workflows/execute-pr-preview.yaml
@@ -96,7 +96,7 @@ jobs:
       uses: actions/github-script@v6
       with:
         script: |
-          const base = 'https://docs-staging.validmind.ai/pr_previews/${{ github.head_ref }}';
+          const base = `https://docs-staging.validmind.ai/pr_previews/${{ github.head_ref }}`;
           const devUrl = `${base}/notebooks/EXECUTED/model_development/1-set_up_validmind.html`;
           const valUrl = `${base}/notebooks/EXECUTED/model_validation/1-set_up_validmind_for_validation.html`;
 
