Fix Makefile help

--- a/site/Makefile
+++ b/site/Makefile
@@ -24,8 +24,8 @@ help:
 	@echo "  clone                    Clone other required repositories into _source/"
 	@echo "                           Optional, for PR testing:" 
 	@echo "                              LIBRARY=<branch-name>"
-	@echo "                              INSTALLATION=<branch-name>"
-	@echo "                              RELEASE_NOTES=<branch-name>"
+	@echo "                              INSTALLATION_BRANCH=<branch-name>"
+	@echo "                              RELEASE_NOTES_BRANCH=<branch-name>"
 	@echo "  copy-installation        Copy customer-managed installation docs into installation/"
 	@echo "  copy-release-notes       Copy release notes into releases/ and installation/releases/"
 	@echo "  delete-demo-branch       Delete docs demo site in s3://docs-ci-cd-demo/site/pr_previews/$(GIT_BRANCH)/"
