Setup: Customize model findings layout

--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -104,6 +104,7 @@ website:
           contents:
           - text: "View and filter findings"
             file: guide/model-validation/view-filter-model-findings.qmd
+          - guide/model-validation/customize-model-findings-layout.qmd
           - text: "Add and manage findings"
             file: guide/model-validation/add-manage-model-findings.qmd
           - guide/model-validation/customize-finding-overview-page.qmd
