Setup: Export findings

--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -115,6 +115,7 @@ website:
           - guide/reporting/view-report-data.qmd
           - guide/reporting/manage-custom-reports.qmd
         - guide/reporting/export-documentation.qmd
+        - guide/reporting/export-findings.qmd
         - text: "---"
         - text: "Monitoring"
         - file: guide/monitoring/ongoing-monitoring.qmd
