--- a/.github/workflows/execute-pr-preview.yaml
+++ b/.github/workflows/execute-pr-preview.yaml
@@ -96,9 +96,25 @@ jobs:
       uses: actions/github-script@v6
       with:
         script: |
-          const base = 'https://docs-staging.validmind.ai/pr_previews/${{ github.head_ref }}';
+          const base = `https://docs-staging.validmind.ai/pr_previews/${{ github.head_ref }}`;
           const devUrl = `${base}/notebooks/EXECUTED/model_development/1-set_up_validmind.html`;
           const valUrl = `${base}/notebooks/EXECUTED/model_validation/1-set_up_validmind_for_validation.html`;
+
+          // Delete old preview comments
+          const { data: comments } = await github.rest.issues.listComments({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            issue_number: context.issue.number,
+          });
+          for (const comment of comments) {
+            if (comment.user.login === 'github-actions[bot]' && comment.body.includes('## Execute training notebooks for PRs')) {
+              await github.rest.issues.deleteComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                comment_id: comment.id,
+              });
+            }
+          }
 
           let comment = `## Execute training notebooks for PRs\n\n`;
           comment += `✓ INFO: Live previews are available —\n\n`;
