--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -114,8 +114,11 @@ website:
           contents:
           - guide/reporting/view-report-data.qmd
           - guide/reporting/manage-custom-reports.qmd
-        - guide/reporting/export-documents.qmd
-        - guide/reporting/export-findings.qmd
+        - file: guide/reporting/generating-exports.qmd
+          contents:
+          - guide/reporting/export-inventory.qmd
+          - guide/reporting/export-documents.qmd
+          - guide/reporting/export-findings.qmd
         - text: "---"
         - text: "Monitoring"
         - file: guide/monitoring/ongoing-monitoring.qmd
