--- a/site/_variables.yml
+++ b/site/_variables.yml
@@ -24,7 +24,7 @@ validmind:
   training: "ValidMind Academy"
   customer: "Customer-Managed ValidMind"
   admin: "ValidMind Admin UI"
-  checker: "Document Checker"
+  checker: "Virtual Document Validator"
 
 
 
@@ -37,7 +37,7 @@ vm:
   api: "Python API"
   customer: "CMVM"
   admin: "admin UI"
-  checker: "checker"
+  checker: "document validator"
 
 # PRODUCT URLS
 # Links to ValidMind hosted web applications
