Customize VDV draft

--- a/site/_variables.yml
+++ b/site/_variables.yml
@@ -37,7 +37,7 @@ vm:
   api: "Python API"
   customer: "CMVM"
   admin: "admin UI"
-  checker: "document validator"
+  checker: "Document Checker"
 
 # PRODUCT URLS
 # Links to ValidMind hosted web applications
