--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -66,8 +66,8 @@ website:
           contents:
           - guide/templates/manage-document-types.qmd
           - guide/templates/manage-model-documents.qmd
-          - text: "Manage regulations & policies"
-            file: guide/templates/manage-regulations-policies.qmd
+          - text: "Customize document validator"
+            file: guide/templates/customize-virtual-document-validator.qmd
         - text: "Working with templates"
           file: guide/templates/working-with-document-templates.qmd
           contents:
