Testing vendored Quarto version

--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -42,8 +42,10 @@ jobs:
         path: site/_source/release-notes
         token: ${{ secrets.RELEASE_NOTES_RO_PAT }}
 
-    - name: Set up Quarto
-      uses: quarto-dev/quarto-actions/setup@v2
+    - name: Set up Quarto (vendored)
+      uses: ./.github/actions/setup-quarto-local
+      with:
+        version: ${{ vars.QUARTO_VERSION }}
 
     - name: Setup R environment
       uses: ./.github/actions/setup-r
