Oops, forgot the tarball

--- a/.github/actions/quarto-local/action.yml
+++ b/.github/actions/quarto-local/action.yml
@@ -22,7 +22,7 @@ runs:
       shell: bash
       run: |
         set -euo pipefail
-        ARCHIVE="${{ inputs.root }}/${{ inputs.version }}/quarto-linux-amd64.tar.gz"
+        ARCHIVE="${{ inputs.root }}/quarto-${{ inputs.version }}-linux-amd64.tar.gz"
         if [ ! -f "$ARCHIVE" ]; then
           echo "Missing $ARCHIVE"
           exit 1
