Add LFS retrieval to workflow

--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -34,6 +34,7 @@ jobs:
         repository: validmind/installation
         path: site/_source/installation
         token: ${{ secrets.INSTALLATION_RO_PAT }}
+        lfs: true
 
     - name: Check out release-notes repository
       uses: actions/checkout@v4
