--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -16,6 +16,8 @@ jobs:
     steps:
     - name: Check out documentation repository
       uses: actions/checkout@v4
+      with:
+        lfs: true
 
     # Reclaim space + create a reserve for deterministic headroom
     - name: Free space + create reserve
@@ -34,7 +36,6 @@ jobs:
         repository: validmind/installation
         path: site/_source/installation
         token: ${{ secrets.INSTALLATION_RO_PAT }}
-        lfs: true
 
     - name: Check out release-notes repository
       uses: actions/checkout@v4
