Make login link specific to profile

--- a/site/_quarto-staging.yml
+++ b/site/_quarto-staging.yml
@@ -2,7 +2,7 @@ website:
   navbar:
     right:
       - text: "Log In"
-        href:  https://app.prod.validmind.ai/
+        href:  https://app.staging.validmind.ai/
 
 format:
   html:
