--- a/site/_quarto-development.yml
+++ b/site/_quarto-development.yml
@@ -3,7 +3,7 @@ website:
   navbar:
     right:
       - text: "Log In"
-        href:  https://app.prod.validmind.ai/
+        href:  https://app.dev.vm.validmind.ai/
 
 format:
   html:
