Applying pinned Quarto version to other workflows

--- a/.github/workflows/deploy-docs-prod.yaml
+++ b/.github/workflows/deploy-docs-prod.yaml
@@ -49,6 +49,8 @@ jobs:
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
+        with:
+          version: ${{ vars.QUARTO_VERSION }}
 
       - name: Setup R environment
         uses: ./.github/actions/setup-r
