--- a/.github/workflows/execute-pr-preview.yaml
+++ b/.github/workflows/execute-pr-preview.yaml
@@ -50,6 +50,8 @@ jobs:
     - name: Set up Quarto
       if: steps.filter.outputs.notebooks == 'true'
       uses: quarto-dev/quarto-actions/setup@v2
+      with:
+        version: ${{ vars.QUARTO_VERSION }}
 
     # If yes then create the dev.env file for use in execution step
     - name: Create dev.env file
