--- a/.github/workflows/execute-staging.yaml
+++ b/.github/workflows/execute-staging.yaml
@@ -37,6 +37,8 @@ jobs:
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
+        with:
+          version: ${{ vars.QUARTO_VERSION }}
 
       - name: Create dev.env file
         id: create_dev_env
