docs: Customize Virtual Document Validator (#947)
* Set up: Manage regulations and policies

* WIP

* Customize VDV draft

* Edits: Check documentation for compliance

* Proofread

* Quick UI updates

--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -66,6 +66,8 @@ website:
           contents:
           - guide/templates/manage-document-types.qmd
           - guide/templates/manage-model-documents.qmd
+          - text: "Customize document validator"
+            file: guide/templates/customize-virtual-document-validator.qmd
         - text: "Working with templates"
           file: guide/templates/working-with-document-templates.qmd
           contents:
