Add API reference links in footer and dropdown

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -49,9 +49,13 @@ website:
         - text: "{{< fa bullhorn >}} Releases"
           file: releases/all-releases.qmd
         - text: "---"
-        - text:  "{{< fa cube >}} Python Library"
+        - text:  "{{< fa cube >}} Library"
         - text: "{{< fa code >}} {{< var validmind.developer >}}"
           file: developer/validmind-library.qmd
+        - text: "{{< fa code >}} Python API"
+          file: validmind/validmind.qmd
+        - text: "{{< fa code >}} Public REST API"
+          file: reference/validmind-rest-api-vm.qmd
         - text: "---"
         - text:  "{{< fa graduation-cap >}} {{< var validmind.training >}}"
         - text: "{{< fa building-columns >}} Training Courses"
@@ -194,7 +198,8 @@ website:
               <li><a href="/developer/validmind-library.qmd#for-model-development">For developers</a></li>
               <li><a href="/developer/validmind-library.qmd#for-model-validation">For validators</a></li>
               <li><a href="/developer/validmind-library.qmd#try-the-code-samples">Code samples</a></li>
-              <li><a href="/validmind/validmind.qmd">API Reference</a></li>
+              <li><a href="/validmind/validmind.qmd">Python API</a></li>
+              <li><a href="/reference/validmind-rest-api-vm.qmd">Public REST API</a></li>
             </ul>
           </div>
       - text: |
