--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -175,18 +175,16 @@ website:
             <div class="footer-heading">Guides</div>
             <div class="footer-user-guides-columns">
               <ul class="footer-user-guides-column-1">
-                <li><a href="/guide/guides.qmd#access">Access</a></li>
                 <li><a href="/guide/guides.qmd#configuration">Configuration</a></li>
                 <li><a href="/guide/guides.qmd#model-inventory">Model inventory</a></li>
-              </ul>
-              <ul class="footer-user-guides-column-2">
                 <li><a href="/guide/guides.qmd#model-documentation">Model documentation</a></li>
                 <li><a href="/guide/guides.qmd#model-validation">Model validation</a></li>
-                <li><a href="/guide/guides.qmd#model-workflows">Model workflows</a></li>
+                <li><a href="/guide/templates/working-with-document-templates.qmd">Templates</a></li>
               </ul>
-              <ul class="footer-user-guides-column-3">
-                <li><a href="/guide/guides.qmd#reporting">Reporting</a></li>
+              <ul class="footer-user-guides-column-2">
+                <li><a href="/guide/guides.qmd#model-workflows">Model workflows</a></li>
                 <li><a href="/guide/guides.qmd#monitoring">Monitoring</a></li>
+                <li><a href="/guide/guides.qmd#reporting">Reporting</a></li>
                 <li><a href="/guide/guides.qmd#attestation">Attestation</a></li>
               </ul>
             </div>
