--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -38,27 +38,25 @@ website:
     right:
       - text: "{{< fa book-open >}} Documentation"
         menu:
-        - text: "{{< fa circle-info >}} About {{< var vm.product >}}"
+        - text: "About {{< var vm.product >}}"
           file: about/overview.qmd
-        - text: "{{< fa rocket >}} Get Started"
+        - text: "Get Started"
           file: get-started/get-started.qmd
-        - text: "{{< fa book >}} Guides"
+        - text: "Guides"
           file: guide/guides.qmd
-        - text: "{{< fa envelope-open-text >}} Support"
+        - text: "Support"
           file: support/support.qmd
-        - text: "{{< fa bullhorn >}} Releases"
+        - text: "Releases"
           file: releases/all-releases.qmd
         - text: "---"
-        - text:  "{{< fa cube >}} Library"
-        - text: "{{< fa code >}} {{< var validmind.developer >}}"
+        - text: "{{< var validmind.developer >}}"
           file: developer/validmind-library.qmd
-        - text: "{{< fa code >}} Python API"
+        - text: "Python API"
           file: validmind/validmind.qmd
-        - text: "{{< fa code >}} Public REST API"
+        - text: "Public REST API"
           file: reference/validmind-rest-api-vm.qmd
         - text: "---"
-        - text:  "{{< fa graduation-cap >}} {{< var validmind.training >}}"
-        - text: "{{< fa building-columns >}} Training Courses"
+        - text: "Training Courses"
           file: training/training.qmd
 
 # The log in menu is defined in _quarto-development.yml, _quarto-staging.yml, and _quarto-production.yml as not all environments have the same login options.
@@ -175,14 +173,15 @@ website:
             <div class="footer-heading">Guides</div>
             <div class="footer-user-guides-columns">
               <ul class="footer-user-guides-column-1">
+                <li><a href="/guide/guides.qmd#access">Access</a></li>
                 <li><a href="/guide/guides.qmd#configuration">Configuration</a></li>
                 <li><a href="/guide/guides.qmd#model-inventory">Model inventory</a></li>
                 <li><a href="/guide/guides.qmd#model-documentation">Model documentation</a></li>
                 <li><a href="/guide/guides.qmd#model-validation">Model validation</a></li>
-                <li><a href="/guide/templates/working-with-document-templates.qmd">Templates</a></li>
               </ul>
               <ul class="footer-user-guides-column-2">
-                <li><a href="/guide/guides.qmd#model-workflows">Model workflows</a></li>
+                <li><a href="/guide/templates/working-with-document-templates.qmd">Templates</a></li>
+                <li><a href="/guide/guides.qmd#model-workflows">Workflows</a></li>
                 <li><a href="/guide/guides.qmd#monitoring">Monitoring</a></li>
                 <li><a href="/guide/guides.qmd#reporting">Reporting</a></li>
                 <li><a href="/guide/guides.qmd#attestation">Attestation</a></li>
