Apply the basic fixes we agreed on

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -38,23 +38,25 @@ website:
     right:
       - text: "{{< fa book-open >}} Documentation"
         menu:
-        - text: "{{< fa circle-info >}} About {{< var vm.product >}}"
+        - text: "About {{< var vm.product >}}"
           file: about/overview.qmd
-        - text: "{{< fa rocket >}} Get Started"
+        - text: "Get Started"
           file: get-started/get-started.qmd
-        - text: "{{< fa book >}} Guides"
+        - text: "Guides"
           file: guide/guides.qmd
-        - text: "{{< fa envelope-open-text >}} Support"
+        - text: "Support"
           file: support/support.qmd
-        - text: "{{< fa bullhorn >}} Releases"
+        - text: "Releases"
           file: releases/all-releases.qmd
         - text: "---"
-        - text:  "{{< fa cube >}} Python Library"
-        - text: "{{< fa code >}} {{< var validmind.developer >}}"
+        - text: "{{< var validmind.developer >}}"
           file: developer/validmind-library.qmd
+        - text: "Python API"
+          file: validmind/validmind.qmd
+        - text: "Public REST API"
+          file: reference/validmind-rest-api-vm.qmd
         - text: "---"
-        - text:  "{{< fa graduation-cap >}} {{< var validmind.training >}}"
-        - text: "{{< fa building-columns >}} Training Courses"
+        - text: "Training Courses"
           file: training/training.qmd
 
 # The log in menu is defined in _quarto-development.yml, _quarto-staging.yml, and _quarto-production.yml as not all environments have the same login options.
@@ -194,7 +196,8 @@ website:
               <li><a href="/developer/validmind-library.qmd#for-model-development">For developers</a></li>
               <li><a href="/developer/validmind-library.qmd#for-model-validation">For validators</a></li>
               <li><a href="/developer/validmind-library.qmd#try-the-code-samples">Code samples</a></li>
-              <li><a href="/validmind/validmind.qmd">API Reference</a></li>
+              <li><a href="/validmind/validmind.qmd">Python API</a></li>
+              <li><a href="/reference/validmind-rest-api-vm.qmd">Public REST API</a></li>
             </ul>
           </div>
       - text: |
