Add temporary branch ref

--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -40,6 +40,7 @@ jobs:
       with:
         repository: validmind/release-notes
         path: site/_source/release-notes
+        ref: nrichers/sc-12203/release-notes-for-25-10-on-9-25-25
         token: ${{ secrets.RELEASE_NOTES_RO_PAT }}
 
     - name: Set up Quarto
