Address Beck's sidebar suggestion

--- a/site/releases/_sidebar.yaml
+++ b/site/releases/_sidebar.yaml
@@ -4,6 +4,8 @@ website:
       title: "Releases"
       contents:
         - releases/all-releases.qmd
+        - text: "---"
+        - text: "Current releases"
         - releases/highlights.qmd
         - releases/validmind-library-releases.qmd
         - releases/validmind-platform-releases.qmd
@@ -12,7 +14,7 @@ website:
         - text: "Breaking changes & deprecations"
           file: releases/breaking-changes/breaking-changes.qmd
         - text: "---"
-        - text: "Previous releases by date"
+        - text: "Older releases"
         # MAKE-RELEASE-NOTES-EMBED-MARKER
         - releases/2025/2025-apr-24/release-notes.qmd
         - releases/2025/2025-mar-07/release-notes.qmd
