--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -33,8 +33,7 @@ website:
         - guide/configuration/manage-platform-notifications.qmd
         - text: "---"
         - text: "Model Workflows"
-        - text: "Setting up model workflows"
-          file: guide/model-workflows/setting-up-workflows.qmd
+        - file: guide/model-workflows/setting-up-workflows.qmd
           contents:
           - guide/model-workflows/manage-model-stages.qmd
           - guide/model-workflows/configure-model-workflows.qmd
