--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -32,18 +32,18 @@ website:
           - guide/configuration/customize-your-dashboard.qmd
         - guide/configuration/manage-platform-notifications.qmd
         - text: "---"
-        - text: "Model Workflows"
-        - file: guide/model-workflows/setting-up-workflows.qmd
+        - text: "Workflows"
+        - file: guide/workflows/setting-up-workflows.qmd
           contents:
-          - guide/model-workflows/manage-model-stages.qmd
-          - guide/model-workflows/configure-model-workflows.qmd
-          - guide/model-workflows/workflow-configuration-examples.qmd
+          - guide/workflows/manage-model-stages.qmd
+          - guide/workflows/configure-model-workflows.qmd
+          - guide/workflows/workflow-configuration-examples.qmd
         - text: "Working with workflows"
-          file: guide/model-workflows/working-with-model-workflows.qmd
+          file: guide/workflows/working-with-model-workflows.qmd
           contents:
-          - guide/model-workflows/manage-model-workflows.qmd
-          - guide/model-workflows/transition-model-workflows.qmd
-          - guide/model-workflows/manage-workflow-tasks.qmd
+          - guide/workflows/manage-model-workflows.qmd
+          - guide/workflows/transition-model-workflows.qmd
+          - guide/workflows/manage-workflow-tasks.qmd
         - text: "---"
         - text: "Model Inventory"
         - text: "Working with the inventory"
