--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -38,8 +38,7 @@ website:
           - guide/workflows/manage-model-stages.qmd
           - guide/workflows/configure-model-workflows.qmd
           - guide/workflows/workflow-configuration-examples.qmd
-        - text: "Working with workflows"
-          file: guide/workflows/working-with-model-workflows.qmd
+        - file: guide/workflows/working-with-workflows.qmd
           contents:
           - guide/workflows/manage-model-workflows.qmd
           - guide/workflows/transition-model-workflows.qmd
