--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -181,7 +181,7 @@ website:
               <ul class="footer-user-guides-column-2">
                 <li><a href="/guide/guides.qmd#model-documentation">Model documentation</a></li>
                 <li><a href="/guide/guides.qmd#model-validation">Model validation</a></li>
-                <li><a href="/guide/guides.qmd#model-workflows">Model workflows</a></li>
+                <li><a href="/guide/guides.qmd#workflows">Workflows</a></li>
               </ul>
               <ul class="footer-user-guides-column-3">
                 <li><a href="/guide/guides.qmd#reporting">Reporting</a></li>
