Add site/validmind to the .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@ site/releases/validmind-library
 
 # Generated ConfigMap for Docker profile
 site/validmind-docs.yaml
+
+# Python API docs are now generated on the fly
+site/validmind
