--- a/.github/workflows/deploy-docs-staging.yaml
+++ b/.github/workflows/deploy-docs-staging.yaml
@@ -38,7 +38,7 @@ jobs:
         with:
           repository: validmind/validmind-library
           path: site/_source/validmind-library
-          token: ${{ secrets.VALIDMIND_LIBRARY_RO_PAT }}
+          token: ${{ secrets.RELEASE_NOTES_RO_PAT }}
 
       - name: Check out installation repository
         uses: actions/checkout@v4
