Explicitly install poetry before generating Python API docs

--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -57,6 +57,11 @@ jobs:
     - name: Setup R environment
       uses: ./.github/actions/setup-r
 
+    - name: Install Poetry
+      run: |
+        curl -sSL https://install.python-poetry.org | python3 -
+        echo "$HOME/.local/bin" >> $GITHUB_PATH
+
     - name: Generate Python library docs
       run: |
         cd site/_source/validmind-library
