Remove Slack sign-up page & update community resources

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -223,8 +223,9 @@ website:
           <div class="footer-section">
             <div class="footer-heading">Community</div>
             <ul>
-              <li><a href="/about/contributing/join-community.qmd" target="_blank"><i class="fa-brands fa-slack"></i> Slack</a></li>
               <li><a href="https://github.com/validmind/documentation"><i class="fa-brands fa-github"></i> GitHub</a></li>
+              <li><a href="https://www.linkedin.com/company/validmind"><i class="fa-brands fa-linkedin"></i> LinkedIn</a></li>
+              <li><a href="https://validmind.com/events/"><i class="fa-solid fa-circle-user"></i> Events</a></li>
               <li><a href="https://validmind.com/blog/"><i class="fa-solid fa-circle-check"></i> Blog</a></li>
             </ul>
           </div>
