Setup: Manage finding severities

--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -92,6 +92,7 @@ website:
           contents:
           - guide/model-validation/manage-validation-guidelines.qmd
           - guide/model-validation/manage-finding-types.qmd
+          - guide/model-validation/manage-finding-severities.qmd
           - guide/model-validation/manage-model-finding-fields.qmd
         - file: guide/model-validation/preparing-validation-reports.qmd
           contents:
