Cleaning up community page

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -225,8 +225,8 @@ website:
             <ul>
               <li><a href="https://github.com/validmind/documentation"><i class="fa-brands fa-github"></i> GitHub</a></li>
               <li><a href="https://www.linkedin.com/company/validmind"><i class="fa-brands fa-linkedin"></i> LinkedIn</a></li>
-              <li><a href="https://validmind.com/events/"><i class="fa-solid fa-circle-user"></i> Events</a></li>
-              <li><a href="https://validmind.com/blog/"><i class="fa-solid fa-circle-check"></i> Blog</a></li>
+              <li><a href="https://validmind.com/events/"><i class="fa-solid fa-calendar-check"></i> Events</a></li>
+              <li><a href="https://validmind.com/blog/"><i class="fa-solid fa-blog"></i> Blog</a></li>
             </ul>
           </div>
     right: |
