--- a/.github/workflows/deploy-docs-prod.yaml
+++ b/.github/workflows/deploy-docs-prod.yaml
@@ -80,7 +80,9 @@ jobs:
         run: cp -r site/_source/installation/site/installation site/installation
 
       - name: Populate release notes
-        run: cp -r site/_source/release-notes/releases site
+        run: |
+          cp -r site/_source/release-notes/releases site
+          rm -f site/releases/backend-releases.qmd site/releases/cmvm-releases.qmd
 
       - name: Render prod docs site
         run: |
