Update & simplify .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -22,12 +22,10 @@ release-scripts/__pycache__
 site/installation
 
 # Release notes source tracked in private repository
-site/releases/backend
-site/releases/cmvm
-site/releases/documentation
-site/releases/frontend
-site/releases/installation
-site/releases/validmind-library
+site/releases
+!site/releases/all-releases.qmd
+!site/releases/_how-to-upgrade.qmd
+!site/releases/_sidebar.yaml
 
 # Generated ConfigMap for Docker profile
 site/validmind-docs.yaml
