Getting ready for some new content

--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -26,6 +26,10 @@ website:
           - guide/configuration/manage-roles.qmd
           - guide/configuration/manage-model-stakeholder-types.qmd
           - guide/configuration/manage-permissions.qmd
+        - file: guide/integrations/managing-integrations.qmd
+          contents:
+          - guide/integrations/manage-integration-secrets.qmd
+          - guide/integrations/configure-connections.qmd
         - file: guide/configuration/personalize-validmind.qmd
           contents:
           - guide/configuration/manage-your-profile.qmd
