--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -30,6 +30,8 @@ website:
           contents:
           - guide/integrations/manage-integration-secrets.qmd
           - guide/integrations/configure-connections.qmd
+          # Something something workflows - HTTP requests and webhooks
+          # Integration examples
         - file: guide/configuration/personalize-validmind.qmd
           contents:
           - guide/configuration/manage-your-profile.qmd
