--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -33,6 +33,11 @@ website:
         - guide/configuration/manage-platform-notifications.qmd
         - text: "---"
         - text: "Workflows"
+        - file: guide/workflows/introduction-to-workflows.qmd
+          contents:
+          - guide/workflows/workflow-step-types.qmd
+          - guide/workflows/conditional-requirements.qmd
+          - guide/workflows/workflow-states.qmd
         - file: guide/workflows/setting-up-workflows.qmd
           contents:
           - guide/workflows/manage-model-stages.qmd
