Topic rename experiment

--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -30,8 +30,7 @@ website:
           contents:
           - guide/integrations/manage-secrets.qmd
           - guide/integrations/configure-connections.qmd
-          # Something something workflows - HTTP requests and webhooks
-          # Integration examples
+          - guide/integrations/connect-through-workflows.qmd
         - file: guide/configuration/personalize-validmind.qmd
           contents:
           - guide/configuration/manage-your-profile.qmd
