Address early review feedback from Beck

--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -26,16 +26,18 @@ website:
           - guide/configuration/manage-roles.qmd
           - guide/configuration/manage-model-stakeholder-types.qmd
           - guide/configuration/manage-permissions.qmd
-        - file: guide/integrations/managing-integrations.qmd
-          contents:
-          - guide/integrations/manage-secrets.qmd
-          - guide/integrations/configure-connections.qmd
-          - guide/integrations/usage-examples.qmd
         - file: guide/configuration/personalize-validmind.qmd
           contents:
           - guide/configuration/manage-your-profile.qmd
           - guide/configuration/customize-your-dashboard.qmd
         - guide/configuration/manage-platform-notifications.qmd
+        - text: "---"
+        - text: "Integrations"
+        - file: guide/integrations/managing-integrations.qmd
+          contents:
+          - guide/integrations/manage-secrets.qmd
+          - guide/integrations/configure-connections.qmd
+          - guide/integrations/integrations-examples.qmd
         - text: "---"
         - text: "Workflows"
         - file: guide/workflows/introduction-to-workflows.qmd
