Working with artifacts sidebar

--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -115,11 +115,9 @@ website:
           - guide/model-documentation/submit-for-approval.qmd
         - file: guide/model-validation/working-with-artifacts.qmd
           contents:
-          - text: "View and filter findings"
-            file: guide/model-validation/view-filter-artifacts.qmd
+          - guide/model-validation/view-filter-artifacts.qmd
           - guide/model-validation/customize-artifact-layouts.qmd
-          - text: "Add and manage findings"
-            file: guide/model-validation/add-manage-artifacts.qmd
+          - guide/model-validation/add-manage-artifacts.qmd
           - guide/model-validation/customize-artifact-overview-page.qmd
         - text: "---"
         - text: "Reporting"
