Docs -training: findings scrub

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -118,7 +118,7 @@ website:
               file: faq/faq-inventory.qmd
             - text: "Documentation & templates"
               file: faq/faq-documentation.qmd
-            - text: "Validation & findings"
+            - text: "Validation & artifacts"
               file: faq/faq-validation.qmd
             - faq/faq-collaboration.qmd
             - text: "Monitoring & reporting"
