--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -37,6 +37,7 @@ website:
           contents:
           - guide/integrations/manage-secrets.qmd
           - guide/integrations/configure-connections.qmd
+          - guide/integrations/linking-external-models.qmd
           - guide/integrations/integrations-examples.qmd
         - text: "---"
         - text: "Workflows"
