Missed some, updating the .gitignore so it searches old releases files

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ site/releases
 !site/releases/all-releases.qmd
 !site/releases/_how-to-upgrade.qmd
 !site/releases/_sidebar.yaml
+!site/releases/2023
+!site/releases/2024
+!site/releases/2025
 
 # Generated ConfigMap for Docker profile
 site/validmind-docs.yaml
