--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -40,6 +40,7 @@ jobs:
       with:
         repository: validmind/installation
         path: site/_source/installation
+        ref: nrichers/sc-12977/cmvm-docs-for-cmvm-email
         token: ${{ secrets.INSTALLATION_RO_PAT }}
 
     - name: Check out release-notes repository
