--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -2,6 +2,7 @@ project:
   type: website
 
 metadata-files:
+  - _drafts.yaml
   - get-started/_sidebar.yaml
   - guide/_sidebar.yaml
   - developer/_sidebar.yaml
