--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -31,8 +31,9 @@ website:
           - guide/configuration/manage-your-profile.qmd
           - guide/configuration/customize-your-dashboard.qmd
         - guide/configuration/manage-platform-notifications.qmd
-        - text: "---"
-        - text: "Integrations"
+        # Uncomment when removed from _drafts.yaml
+        # - text: "---"
+        # - text: "Integrations"
         - file: guide/integrations/managing-integrations.qmd
           contents:
           - guide/integrations/manage-secrets.qmd
