Setup: Work with document versions

--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -94,6 +94,7 @@ website:
           - guide/model-documentation/view-documentation-guidelines.qmd
           - guide/model-documentation/work-with-content-blocks.qmd
           - guide/model-documentation/work-with-test-results.qmd
+          - guide/model-documentation/work-with-document-versions.qmd
           - text: "Assign section statuses"
             file: guide/model-documentation/assign-documentation-section-statuses.qmd
           - text: "Check for compliance"
@@ -113,6 +114,7 @@ website:
           - guide/model-validation/review-model-documentation.qmd
           - guide/model-validation/assess-compliance.qmd
           - guide/model-documentation/work-with-content-blocks.qmd
+          - guide/model-documentation/work-with-document-versions.qmd
           - guide/model-documentation/collaborate-with-others.qmd
           - guide/model-documentation/submit-for-approval.qmd
         - file: guide/model-validation/working-with-artifacts.qmd
