--- a/site/releases/_sidebar.yaml
+++ b/site/releases/_sidebar.yaml
@@ -6,7 +6,7 @@ website:
         - releases/all-releases.qmd
         - text: "---"
         - text: "Current releases"
-        - releases/highlights.qmd
+        - releases/feature-highlights.qmd
         - releases/validmind-library-releases.qmd
         - releases/validmind-platform-releases.qmd
         - releases/documentation-updates.qmd
