Initial content generation experiment

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -80,9 +80,16 @@ website:
         - file: about/overview.qmd
           text: "About"
           contents:
-          - text: "Automated testing & documentation"
-            file: about/overview-model-documentation.qmd
-          - about/overview-model-risk-management.qmd
+          - text: "Use cases"
+            file: about/use-cases/ai-governance.qmd
+            contents:
+            - about/use-cases/ai-governance.qmd
+            - about/use-cases/model-risk-management.qmd
+            - about/use-cases/eu-ai-act.qmd
+            - about/use-cases/sr-11-7.qmd
+            - about/use-cases/ss1-23.qmd
+            - about/use-cases/e-23.qmd
+        - about/overview-model-documentation.qmd
         - text: "LLM features"
           file: about/overview-llm-features.qmd
         - file: about/deployment/deployment-options.qmd
