--- a/site/training/_sidebar.yaml
+++ b/site/training/_sidebar.yaml
@@ -12,3 +12,11 @@ website:
         - training/program/learning-paths.qmd
         - training/program/sample-training-plan.qmd
         - training/program/training-faq.qmd
+        - text: "---"
+        - section: "AI Governance Fundamentals"
+          contents:
+          - training/ai-governance/ai-governance-register.qmd
+          - training/ai-governance/understanding-ai-governance.qmd
+          - training/ai-governance/managing-ai-use-cases.qmd
+          - training/ai-governance/configuring-ai-workflows.qmd
+          - training/ai-governance/compliance-and-oversight.qmd
